syntax = "proto3";
package auth;

option go_package="./";

service Auth {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message LoginRequest {
    string user = 1;
    string password   = 2;
}

message LoginResponse {
    string token = 1;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
}